simplify main.sh

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Setup Node.js Express and MySQL"
+name: "Setup Node.js Express and MySQL asdfasdf"
 author: "<Sunwoo0110@gmail.com> && <jihooni0914@gmail.com>"
 description: "A GitHub Action to setup Node.js Express and MySQL"
 inputs:
