secret.gh-token test

--- a/.github/workflows/test_clone.yaml
+++ b/.github/workflows/test_clone.yaml
@@ -12,6 +12,8 @@ jobs:
          - name: Setup
            with:
               github-repo-url: "https://github.com/jihooni0914/my-first-repo.git"
+              github-user-id: "jihooni0914"
+              gh-token: ${{ secrets.GH_TOKEN }}
            uses: ./ 
            
          - name: Test finish
